; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_set_balance_value.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_set_balance_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { float }

@.str = private unnamed_addr constant [29 x i8] c"obs_source_set_balance_value\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_source_set_balance_value(%struct.TYPE_4__* %0, float %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca float, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store float %1, float* %4, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = call i32 @obs_source_valid(%struct.TYPE_4__* %5, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %13

9:                                                ; preds = %2
  %10 = load float, float* %4, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  store float %10, float* %12, align 4
  br label %13

13:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @obs_source_valid(%struct.TYPE_4__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
